--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,8 @@
   "main": "server.js",
   "scripts": {
     "dev": "node --watch server.js",
+    "start": "node server.js",
+    "build": "npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Boolean",
@@ -16,6 +18,7 @@
     "express": "^4.21.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.11.0"
+    "mongoose": "^8.12.0",
+    "redis": "^4.7.0"
   }
 }
