--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactnative-keep-note",
+  "name": "keep-note",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
